# netsmith

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CITATION.md  CODE_REVIEW.md  CONTRIBUTING.md  MANIFEST.in  MIGRATION_SUMMARY.md  PRODUCTION_QUALITY_AUDIT.md  PRODUCTION_READINESS.md  README.md  ROADMAP.md  RUST_BACKEND_SUMMARY.md  SECURITY.md  makefile  pyproject.toml  pytest.ini  requirements.txt
.cursor/: MIGRATION_SUMMARY.md  ROADMAP.md  rules
.github/workflows/: ci.yml  lint.yml  release.yml  tests.yml
configs/: README.md
docs/: QUICK_REFERENCE.md  api.rst  conf.py  examples.rst  index.rst  usage.rst
docs/_build/html/.doctrees/: environment.pickle
docs/benchmarks/: horizon-limited-nvg.md  rust-degree-computation.md
examples/: README.md  basic_network_analysis.ipynb  basic_network_analysis.py  community_detection.ipynb  community_detection_example.py  metrics_example.ipynb  metrics_example.py  null_models.ipynb  null_models_example.py
rust/: Cargo.toml
scripts/: dev_build.sh  run_from_config.py  test-local.sh  test_pypi_publish.sh  validate_release.py  verify_pypi_setup.py
src/netsmith/: __init__.py  __main__.py  exceptions.py  logging_config.py
src/netsmith/api/: __init__.py  compute.py  graph.py  load.py  metrics.py  paths.py  validate.py
src/netsmith/apps/: __init__.py
src/netsmith/core/: __init__.py  community.py  graph.py  metrics.py  nulls.py  paths.py  stats.py
src/netsmith/engine/: __init__.py  contracts.py  dispatch.py
tests/: conftest.py  test_api_validate.py  test_core_graph.py  test_core_metrics.py  test_core_paths.py  test_engine_contracts.py  test_engine_dispatch.py  test_null_models.py  test_transfer_entropy.py
tests/unit/: test_cli.py
(+11 files in other folders)
