[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "netsmith"
version = "0.1.0"
description = "Fast network analysis library with Rust acceleration"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Kyle T. Jones", email = "kyle@kyletjones.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Intended Audience :: Science/Research",
]

# Main dependencies
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
]

# Optional dependencies
[project.optional-dependencies]
rust = []  # Rust backend (installed automatically if available)
pandas = ["pandas>=1.5"]
polars = ["polars>=0.20"]
networkx = ["networkx>=3.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.12",
]

[project.scripts]
netsmith = "netsmith.apps.cli:main"

# Maturin configuration for Rust extension
[tool.maturin]
# Path to the Cargo.toml of the Rust project (relative to the project root)
manifest-path = "./rust/crates/netsmith-py/Cargo.toml"
# Build in release mode for better performance
release = true
# Strip the binary to reduce size
strip = true
# Include LICENSE file in source distribution
sdist-include = ["LICENSE", "README.md", "CHANGELOG.md"]
